# fitparse-rs

./: Cargo.toml
fitparser/: Cargo.toml
fitparser/src/: lib.rs
fitparser/src/de/: decode.rs  parser.rs
generate-fit-profile/src/: main.rs  parse.rs
src/de/: decode.rs  mod.rs
